@@ -64,6 +64,7 @@ public:
   nux::RWProperty<FormFactor> form_factor;
   nux::Property<bool> is_standalone;
   nux::ROProperty<DesktopType> desktop_type;
+  nux::ROProperty<bool> pam_check_account_type;
   nux::ROProperty<bool> double_click_activate;
   nux::Property<unsigned> lim_movement_thresold;
   nux::Property<unsigned> lim_double_click_wait;
