@@ -14,6 +14,8 @@ unity (7.4.0+16.04.20160526.1-0ubuntu2) UNRELEASED; urgency=medium
   * Do not trigger screensaver on session inactive. (LP: #1587507)
   * Use SwitcherController::SetDetail instead of detail=... (LP:
     #1587618)
+  * UnitySettings: Add an option to enable/disable pam account checking.
+    (LP: #1460649)
 
   [ Alberto Milone ]
   * UnitySettings: Add dconf keys for disabling multitouch gestures (LP:
